Bug 519168 - 'Always use light variant' does not work for SVG based wallpapers
Summary: 'Always use light variant' does not work for SVG based wallpapers
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 6.6.4
Platform: Kubuntu Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-04-20 03:55 UTC by Chandradeep Dey
Modified: 2026-06-11 15:59 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chandradeep Dey 2026-04-20 03:55:41 UTC
SUMMARY
Kubuntu 26.04 has a new default SVG wallpaper package that has both images and images_dark. When using that wallpaper, the 'Always use light variant' option is ignored, and the wallpaper theme comes from the global theme instead.

STEPS TO REPRODUCE
1. Have an SVG wallpaper with both light and dark variants.
2. Switch wallpaper to 'Always use light variant.'

OBSERVED RESULT
Wallpaper stays the same

EXPECTED RESULT
Wallpaper should change to the light variant

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 26.04 LTS
KDE Plasma Version: 6.6.4
KDE Frameworks Version: 6.24.0
Qt Version: 6.10.2
Kernel Version: 7.0.0-14-generic (64-bit)
Graphics Platform: Wayland
Comment 1 Chandradeep Dey 2026-04-20 03:57:47 UTC
Probably related to bug 513876
Comment 2 Michael Mikowski 2026-04-20 19:24:32 UTC
It is not definitive that the problem is with SVG alone, although it is certainly evident with the Kubuntu 26.04 SVG wallpaper theme.
Comment 3 Bug Janitor Service 2026-06-07 09:45:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6691
Comment 4 Fushan Wen 2026-06-07 13:58:16 UTC
Git commit 7f0648c192d8bbfb8bd6262f984848b8cbc5e3b6 by Fushan Wen, on behalf of David W..
Committed on 07/06/2026 at 13:06.
Pushed by fusionfuture into branch 'master'.

wallpapers/image: Respect URL fragment for dark mode detection in MediaProxy

When an image URL contains a "#dark" or "#light" fragment, respect that
over the system color scheme when determining the darkMode query parameter.

M  +4    -1    wallpapers/image/plugin/utils/mediaproxy.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/7f0648c192d8bbfb8bd6262f984848b8cbc5e3b6
Comment 5 Fushan Wen 2026-06-07 14:17:32 UTC
Git commit 27ce68191a82e9817af41bedf27db65af8338c46 by Fushan Wen.
Committed on 07/06/2026 at 13:59.
Pushed by fusionfuture into branch 'Plasma/6.7'.

wallpapers/image: Respect URL fragment for dark mode detection in MediaProxy

When an image URL contains a "#dark" or "#light" fragment, respect that
over the system color scheme when determining the darkMode query parameter.


(cherry picked from commit 7f0648c192d8bbfb8bd6262f984848b8cbc5e3b6)

Co-authored-by: David W. <davidwild@gmx.com>

M  +4    -1    wallpapers/image/plugin/utils/mediaproxy.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/27ce68191a82e9817af41bedf27db65af8338c46
Comment 6 Marco Martin 2026-06-08 13:25:44 UTC
Git commit 54e8f02f57a998bfe8f08ff3a2698f5533c268ab by Marco Martin, on behalf of David W..
Committed on 08/06/2026 at 13:25.
Pushed by mart into branch 'Plasma/6.6'.

wallpapers/image: Respect URL fragment for dark mode detection in MediaProxy

When an image URL contains a "#dark" or "#light" fragment, respect that
over the system color scheme when determining the darkMode query parameter.

M  +4    -1    wallpapers/image/plugin/utils/mediaproxy.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/54e8f02f57a998bfe8f08ff3a2698f5533c268ab