wallpapers/image: Respect URL fragment for dark mode detection in MediaProxy

When an image URL contains a "#dark" or "#light" fragment, respect that
over the system color scheme when determining the darkMode query parameter.

BUG: 519168


(cherry picked from commit 7f0648c192d8bbfb8bd6262f984848b8cbc5e3b6)

Co-authored-by: David W. <davidwild@gmx.com>